--- a/src/styles/2-defaults/_utils.scss
+++ b/src/styles/2-defaults/_utils.scss
@@ -29,8 +29,8 @@
 }
 
 .loading {
-	font-weight: 700;
-	font-style: italic;
+	font-weight: 1000;
+	font-style: oblique 35deg;
 	align-self: center;
 	justify-self: center;
 }
